Jetison Bootstrap's javascript and use the native dialog
It looks like the only thing we were using bootstrap's javascript for was the modal behavior. We can use the native dialog element, instead, reducing payload size and removing a dependancy

--- a/views/form.erb
+++ b/views/form.erb
@@ -574,19 +574,19 @@
   </div>
 </form>
 
-<div id="preview-modal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog">
+<dialog id="preview-modal" class="bs-example-modal-lg">
   <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
+    <form method="dialog" class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="submit" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Preview</h4>
       </div>
       <div class="modal-body">
         <div id="preview-content"></div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="submit" class="btn">Close</button>
       </div>
     </div>
   </div>
-</div>
+</dialog>
