--- a/views/redirect.erb
+++ b/views/redirect.erb
@@ -4,7 +4,7 @@
   Micropublish will try to redirect again shortly.
 </div>
 
-<div class="panel panel-default">
+<div class="panel">
   <div class="panel-body">
     <div style="text-align: center">
       <h1 style="font-size: 500%;">
