--- a/views/undelete.erb
+++ b/views/undelete.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel">
   <div class="panel-heading">
     <h3 class="panel-title">Undelete post?</h3>
   </div>
@@ -10,7 +10,7 @@
       </div>
       <div>
         <button class="btn btn-primary btn-success" type="submit">Undelete</button>
-        <a href="/" class="btn btn-default" role="button">Cancel</a>
+        <a href="/" class="btn" role="button">Cancel</a>
       </div>
     </form>
   </div>
