--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -1,6 +1,6 @@
-<div class="panel panel-default">
+<div class="panel">
   <div class="panel-heading">
-    <h3 class="panel-title">Create a new post</h3>
+    <h2 class="panel-title">Create a new post</h2>
   </div>
   <div class="panel-body new-buttons">
     <div>
@@ -33,7 +33,7 @@
         </label>
         <noscript>
           &nbsp;
-          <button type="submit" class="btn btn-default btn-sm">Set</button>
+          <button type="submit" class="btn btn-sm">Set</button>
         </noscript>
       </div>
     </form>
@@ -41,33 +41,32 @@
 </div>
 
 <% if session[:scope].split(' ').any? { |s| ['update', 'delete', 'undelete'].include?(s) } %>
-<form action="/edit" method="get">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Modify an existing post</h3>
-    </div>
-    <div class="panel-body">
-      <input type="url" class="form-control" name="url" required>
-      <p class="help-block">
-        Enter the absolute URL of a post on your site.
-      </p>
-    </div>
-    <div class="panel-footer">
-      <% if session[:scope].split(' ').include?('update') %>
-        <button name="edit" class="btn btn-default">Edit</button>
-        &nbsp;
-        <button name="edit-all" class="btn btn-default"
-          title="&quot;The Kitchen Sink&quot; editor">Edit all</button>
-        &nbsp;
+<form action="/edit" method="get" class="panel">
+  <div class="panel-heading">
+    <h2 class="panel-title">Modify an existing post</h2>
+  </div>
+  <div class="panel-body">
+    <label for="url">URL</label>
+    <input type="url" class="form-control" name="url" id="url" required>
+    <p class="help-block">
+      Enter the absolute URL of a post on your site.
+    </p>
+  </div>
+  <div class="panel-footer">
+    <% if session[:scope].split(' ').include?('update') %>
+      <button name="edit" class="btn">Edit</button>
+      &nbsp;
+      <button name="edit-all" class="btn"
+        title="&quot;The Kitchen Sink&quot; editor">Edit all</button>
+      &nbsp;
+    <% end %>
+    <div class="btn-group" role="group">
+      <% if session[:scope].split(' ').include?('delete') %>
+        <button name="delete" class="btn">Delete</button>
       <% end %>
-      <div class="btn-group" role="group">
-        <% if session[:scope].split(' ').include?('delete') %>
-          <button name="delete" class="btn btn-default">Delete</button>
-        <% end %>
-        <% if session[:scope].split(' ').include?('undelete') %>
-          <button name="undelete" class="btn btn-default">Undelete</button>
-        <% end %>
-      </div>
+      <% if session[:scope].split(' ').include?('undelete') %>
+        <button name="undelete" class="btn">Undelete</button>
+      <% end %>
     </div>
   </div>
 </form>
