--- a/views/preview.erb
+++ b/views/preview.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel">
   <div class="panel-heading">
     <h3 class="panel-title">Preview</h3>
   </div>
