only load trix on the article form

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,9 +12,11 @@
     <link rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/micropublish.css">
-    <link rel="stylesheet" href="/css/trix.css">
+    <% if request.path_info.match '\/article$' %>
+      <link rel="stylesheet" href="/css/trix.css">
+      <script src="/scripts/trix.js"></script>
+    <% end %>
     <link rel="manifest" href="/manifest.json">
-    <script src="/scripts/trix.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
