--- a/public/css/micropublish.css
+++ b/public/css/micropublish.css
@@ -1,9 +1,54 @@
+:root {
+  --gray-1: #333;
+  --gray-2: #3d3d3d;
+  --gray-3: #4c4c4c;
+  --gray-4: #555;
+  --gray-5: #666;
+  --gray-6: #8c8c8c;
+  --gray-7: #999;
+  --gray-8: #adadad;
+  --gray-9: #ccc;
+  --gray-10: #ddd;
+  --gray-11: #e6e6e6;
+  --gray-12: #f5f5f5;
+  --gray-13: #fff;
+
+  --background: var(--gray-1);
+  --background-alt: #3d3d3d;
+  --border-color: #555;
+  --color: #ddd;
+
+  font-size: 100%;
+}
+
+@media not (prefers-color-scheme: dark) {
+  :root {
+    --background: var(--gray-13);
+    --background-alt: #f5f5f5;
+    --border-color: #ddd;
+    --color: var(--gray-1);
+  }
+
+}
 body {
-  padding-bottom: 1em;
+  background: var(--background);
+  color: var(--color);
+  font-family: sans-serif;
 }
 pre {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  color: #333;
+  font-size: 13px;
+  line-height: 1.42857143;
+  margin: 0 0 10px;
+  padding: 9.5px;
   white-space: pre-wrap;
+  word-break: break-all;
+  word-wrap: break-word;
 }
+
 .input-array input {
   margin-bottom: 3px;
 }
@@ -11,17 +56,24 @@ pre {
   text-align: right;
 }
 .new-buttons {
-  padding-bottom: 5px;
-  padding-right: 10px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, 90px);
+  justify-content: center;
 }
 .new-buttons a {
-  margin-bottom: 10px;
-  margin-right: 5px;
   width: 90px;
 }
 .new-buttons span {
   font-size: 180%;
   line-height: 1.5em;
+}
+.new-buttons svg {
+  display: block;
+  fill: currentColor;
+  height: 30px;
+  margin: 10px auto;
+  width: 50px;
 }
 trix-editor {
   min-height: 160px !important;
@@ -34,12 +86,12 @@ trix-editor {
   font-weight: normal;
 }
 .helpable .help-block {
-  sdisplay: none;
+  display: none;
 }
 .help-block code {
-  display: block;
   background: none;
   color: inherit;
+  display: block;
   padding: 2px 0;
 }
 #static .badge {
@@ -48,18 +100,353 @@ trix-editor {
 #static img {
   margin-left: 20px;
 }
-#preview-content .alert, #preview-content pre {
+#preview-content .alert,
+#preview-content pre {
   margin-bottom: 0;
-}
-.required {
-  color: red;
 }
 
 @media screen and (max-width: 700px) {
-  form.logout { float: none; }
+  form.logout {
+    float: none;
+  }
   #static img {
     float: none !important;
     margin-left: 0;
     max-width: 100%;
   }
+}
+
+a {
+  color: hsl(208, 56%, 66%);
+  text-decoration: underline;
+}
+a:active,
+a:focus,
+a:hover {
+  color: hsl(208, 56%, 81%);
+}
+@media (prefers-color-scheme: light) {
+  a {
+    color: hsl(208, 56%, 46%);
+  }
+  a:active,
+  a:focus,
+  a:hover {
+    color: hsl(208.3, 56%, 31.2%);
+  }
+}
+code {
+  background-color: #f9f2f4;
+  border-radius: 4px;
+  color: #c7254e;
+  font-family: monospace;
+  font-size: 90%;
+  padding: 2px 4px;
+}
+
+header {
+  align-items: center;
+  background: var(--background-alt);
+  border: 1px solid var(--border-color);
+  display: flex;
+  margin-bottom: 20px;
+  min-height: 50px;
+  position: relative;
+}
+
+footer {
+  border-top: solid 1px var(--border-color);
+  margin-top: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+h1 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin: 0;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid #444;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+label {
+  display: inline-block;
+  font-size: 0.875rem;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+::backdrop {
+  background: #333;
+  opacity: 0.5;
+}
+.close {
+  color: var(--color);
+  float: right;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1;
+  opacity: 0.2;
+  text-shadow: 0 1px 0 var(--background);
+}
+.close:focus,
+.close:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  text-decoration: none;
+}
+button.close {
+  -webkit-appearance: none;
+  background: 0 0;
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+}
+
+dialog {
+  background: transparent;
+  border: none;
+  color: var(--color);
+  margin: auto;
+  padding: 0;
+  width: 100%;
+}
+.alert {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  padding: 15px;
+}
+.alert-info {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+  color: #31708f;
+}
+.badge {
+  background-color: var(--color);
+  border-radius: 10px;
+  color: var(--background);
+  display: inline-block;
+  font-size: 0.75rem;
+  font-weight: 700;
+  line-height: 1;
+  min-width: 0.625rem;
+  padding: 3px 7px;
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+.badge svg {
+  display: inline-block;
+  fill: currentColor;
+  height: 1em;
+  margin-right: 0.3em;
+  vertical-align: text-top;
+  width: 1em;
+}
+.btn {
+  --border-color: var(--gray-5);
+  --padding: 6px 12px;
+  background-color: var(--background);
+  background-image: none;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  color: var(--color);
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.42857143;
+  margin-bottom: 0;
+  padding: var(--padding);
+  text-align: center;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.btn-xs {
+  --padding: 1px 5px;
+  border-radius: 3px;
+  font-size: 0.75rem;
+  line-height: 1.5;
+}
+
+.btn:active,
+.btn:focus,
+.btn:hover {
+  --background: var(--gray-3);
+  --border-color: var(--gray-6);
+  color: var(--color);
+}
+
+@media (prefers-color-scheme: light) {
+  .btn:active,
+  .btn:focus,
+  .btn:hover {
+    --background: var(--gray-9);
+    --border-color: var(--gray-8);
+  }
+}
+
+.btn-primary {
+  --color: var(--gray-13);
+  --background: #337ab7;
+  --border-color: #2e6da4;
+}
+.btn-primary:active,
+.btn-active:hover {
+  --background: #386090;
+  --border-color: #204d74;
+
+}
+
+.btn-group {
+  display: inline-flex;
+  position: relative;
+}
+.btn-group > .btn:first-child {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+.btn-group > .btn:last-child {
+  border-bottom-left-radius: 0;
+  border-left: none;
+  border-top-left-radius: 0;
+}
+.container {
+  margin: 0 auto;
+  max-width: 1170px;
+  padding: 0 15px;
+  width: 100%;
+}
+
+.form-control {
+  background-color: var(--background);
+  background-image: none;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  color: var(--color);
+  display: block;
+  font-size: 1rem;
+  height: 34px;
+  line-height: 1.42857143;
+  padding: 6px 12px;
+  transition: border-color ease-in-out 0.15s,
+    box-shadow ease-in-out 0.15s;
+  width: 100%;
+}
+textarea.form-control {
+  height: unset;
+  resize: vertical;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-inline {
+  display: grid;
+  grid-auto-flow: rows;
+  grid-gap: 15px;
+}
+@media (min-width: 768px) {
+  .form-inline {
+    grid-auto-flow: column;
+    justify-content: start;
+  }
+  .form-inline > .form-group {
+    align-items: center;
+    display: flex;
+    gap: 5px;
+  }
+  .form-inline > .form-group > label {
+    margin-bottom: 0;
+    white-space: nowrap;
+  }
+}
+
+.help-block {
+  color: var(--gray-8);
+}
+
+.modal-body {
+  padding: 15px;
+  position: relative;
+}
+.modal-content {
+  background-clip: padding-box;
+  background-color: var(--background);
+  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 6px;
+  box-shadow: 0 3px 9px rgba(0,0,0,0.5);
+  outline: 0;
+  position: relative;
+}
+.modal-dialog {
+  margin: 2rem auto auto;
+  max-width: 56rem;
+  padding: 1rem;
+  width: 100%;
+}
+.modal-footer {
+  border-top: 1px solid #e5e5e5;
+  padding: 15px;
+  text-align: right;
+}
+.modal-header {
+  border-bottom: 1px solid #e5e5e5;
+  padding: 15px;
+}
+.panel {
+  background-color: var(--background);
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+  margin-bottom: 20px;
+}
+
+.panel-body {
+  padding: 15px;
+}
+
+.panel-body::before {
+  content: none;
+}
+
+.panel-footer {
+  background: var(--background-alt);
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-top: 1px solid var(--border-color);
+  padding: 10px 15px;
+}
+
+.panel-heading {
+  background: var(--background-alt);
+  border-bottom: 1px solid var(--border-color);
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  padding: 10px 15px;
+}
+.panel-heading svg {
+  display: inline-block;
+  fill: currentColor;
+  height: 1rem;
+  vertical-align: text-top;
+  width: 20px;
+}
+.panel-title {
+  font-size: 1rem;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.required {
+  color: #c7254e;
 }
