--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,9 +12,6 @@
       <script src="/scripts/trix.js"></script>
     <% end %>
     <link rel="manifest" href="/manifest.json">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -51,6 +48,6 @@
     </footer>
 
     <script src="/scripts/twitter-text.js"></script>
-    <script src="/scripts/micropublish.js?v=20220312"></script>
+    <script src="/scripts/micropublish.js"></script>
   </body>
 </html>
