fix a missing closing tag

--- a/views/form.erb
+++ b/views/form.erb
@@ -589,6 +589,6 @@
       <div class="modal-footer">
         <button type="submit" class="btn">Close</button>
       </div>
-    </div>
+    </form>
   </div>
 </dialog>
