--- a/views/login.erb
+++ b/views/login.erb
@@ -4,55 +4,46 @@
   <a href="/about">Find out more</a> about the requirements.
 </p>
 
-<div class="panel panel-primary">
+<form action="/auth" method="get" class="panel">
   <div class="panel-heading">
-    <h3 class="panel-title">Sign in</h3>
+    <h2 class="panel-title">Sign in</h2>
   </div>
   <div class="panel-body">
 
-    <form action="/auth" method="get" class="form-horizontal">
-      <div class="form-group">
-        <label for="me" class="col-sm-2 control-label">Micropub&nbsp;URL</label>
-        <div class="col-sm-10">
-          <input type="url" class="form-control" name="me" value="<%= @me %>"
-            placeholder="https://" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-2 control-label">Scope(s)</label>
-        <div class="col-sm-10">
-          <label class="checkbox-inline">
-            <input type="checkbox" name="scope[]" value="create" checked>
-            <code>create</code>
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" name="scope[]" value="update" checked>
-            <code>update</code>
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" name="scope[]" value="delete" checked>
-            <code>delete</code>
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" name="scope[]" value="undelete" checked>
-            <code>undelete</code>
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" name="scope[]" value="draft">
-            <code>draft</code>
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" name="scope[]" value="post">
-            <code>post</code>
-          </label>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button class="btn btn-primary" type="submit">Sign in</button>
-        </div>
-      </div>
-    </form>
-
+    <div class="form-group">
+      <label for="me" class="control-label">Micropub&nbsp;URL</label>
+      <input type="url" class="form-control" name="me" value="<%= @me %>"
+        placeholder="https://" required>
+    </div>
+    <div class="form-group">
+      <h3 class="control-label">Scope(s)</h3>
+      <label class="checkbox">
+        <input type="checkbox" name="scope[]" value="create" checked>
+        <code>create</code>
+      </label>
+      <label class="checkbox">
+        <input type="checkbox" name="scope[]" value="update" checked>
+        <code>update</code>
+      </label>
+      <label class="checkbox">
+        <input type="checkbox" name="scope[]" value="delete" checked>
+        <code>delete</code>
+      </label>
+      <label class="checkbox">
+        <input type="checkbox" name="scope[]" value="undelete" checked>
+        <code>undelete</code>
+      </label>
+      <label class="checkbox">
+        <input type="checkbox" name="scope[]" value="draft">
+        <code>draft</code>
+      </label>
+      <label class="checkbox">
+        <input type="checkbox" name="scope[]" value="post">
+        <code>post</code>
+      </label>
+    </div>
   </div>
-</div>
+  <div class="panel-footer">
+    <button class="btn btn-primary" type="submit">Sign in</button>
+  </div>
+</form>
